# frame_optimizer

./: .gitignore  README.md  gravity_design.py  pyproject.toml
modeler/: __init__.py  wireframe.py
src/frame_optimizer/: __init__.py  clear_span.py  config.py  export.py  geometry.py  results.py
src/frame_optimizer/analysis/: __init__.py  frame_model.py
src/frame_optimizer/design/: __init__.py  aisc_strengths.py  checker.py
src/frame_optimizer/optimization/: __init__.py  optimizer.py
src/frame_optimizer/sections/: __init__.py  database.py
src/frame_optimizer/sections/data/: aisc_w_shapes.csv
tests/: test_analysis.py  test_clear_span.py  test_geometry.py  test_groups.py  test_optimizer.py  test_sections.py  test_strengths.py
tools/: prepare_sections_csv.py
